--- a/index.html
+++ b/index.html
@@ -252,8 +252,13 @@
                 const status_class_pembayaran_ubz = participant.PEMBAYARAN_UBZ.JUMLAH == "Rp299.000" ? 'status-verified' : 'status-pending';
                 const status_text_pembayaran_ubz = participant.PEMBAYARAN_UBZ.JUMLAH == "Rp299.000" ? "Lunas" : "Belum Lunas";
 
-                const status_class_pembayaran_kaos = participant.KAOS.PEMBAYARAN.KURANG !== "" ? 'status-verified' : 'status-pending';
-                const status_text_pembayaran_kaos = participant.KAOS.PEMBAYARAN.KURANG !== "" ? 'Lunas' : 'Belum Bayar';
+                const { TAMBAHAN, PEMBAYARAN } = participant.KAOS;
+                const { KURANG } = PEMBAYARAN;
+
+                const isLunas = (KURANG === "" || KURANG === null) && (TAMBAHAN === "" || TAMBAHAN === null);
+
+                const status_class_pembayaran_kaos = isLunas ? 'status-verified' : 'status-pending';
+                const status_text_pembayaran_kaos = isLunas ? 'Lunas' : 'Belum Bayar';
 
                 resultDiv.innerHTML = `
                     <div class="result-title">Data Peserta Ditemukan</div>
